# swift-browser-use

./: .env.example  .gitignore  Project_design.md  README.md  package.json  pnpm-lock.yaml
app/: page.tsx
app/api/: route.ts
app/api/tts/: route.ts
app/components/: DebugSheet.tsx
app/debugging/: page.tsx
app/elevenlabs/: page.tsx
app/lib/: icons.tsx
app/wstest/: page.tsx
backend/: main.py  pyproject.toml
backend/routers/: websocket_test.py
backend/swift_agent_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/tests/: test_agent_summaries.py
lib/: icons.tsx
