[project]
name = "swift-agent-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    # Quote extras to prevent shell globbing issues if installed directly later
    # and helps uv resolve it correctly even with -e .
    "uvicorn[standard]>=0.27.1",
    "browser-use>=0.1.40",
    "langchain-openai>=0.1.0", # Keep OpenAI as a base/default
    "python-dotenv>=1.0.0",
    "websockets>=12.0",
    "httpx>=0.27.0",
    # --- Temporarily comment out optional providers for debugging ---
    # "langchain-anthropic",
    # "langchain-google-genai",
    # "langchain-community", # For Ollama
    # "langchain-azure-openai",
]

[tool.uv]
# Optional: Define dev dependencies if needed
dev-dependencies = []
